src/main/java/com/example/olc/common/error/BaseError.java
package com.example.olc.common.error;

public class BaseError extends RuntimeException {}
